--- a/Faith Associates/Faith Associates.csproj
+++ b/Faith Associates/Faith Associates.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Models\Bills\SalesTaxInvoice.cs" />
     <Compile Include="Models\Clients\Client.cs" />
     <Compile Include="Models\Items\Item.cs" />
+    <Compile Include="Models\Jobs\PidPayorder.cs" />
     <Compile Include="Models\Jobs\JobPayorder.cs" />
     <Compile Include="Models\Jobs\Pid.cs" />
     <Compile Include="Models\Jobs\Job.cs" />
@@ -155,6 +156,13 @@
     </Compile>
     <Compile Include="Reports\Jobs\CalculationSheet.Designer.cs">
       <DependentUpon>CalculationSheet.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reports\Jobs\NewPIDCalculationSheetReport.cs">
+      <DependentUpon>NewPIDCalculationSheetReport.rpt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <SubType>Component</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Reports\Jobs\PIDCalculationSheetReport.cs">
       <DependentUpon>PIDCalculationSheetReport.rpt</DependentUpon>
@@ -348,6 +356,12 @@
     <Compile Include="Screens\Items\ItemListScreen.Designer.cs">
       <DependentUpon>ItemListScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="Screens\Jobs\NewPidEntryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Screens\Jobs\NewPidEntryForm.Designer.cs">
+      <DependentUpon>NewPidEntryForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Screens\Jobs\PidEntryForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -458,6 +472,11 @@
     <EmbeddedResource Include="Reports\Jobs\CalculationSheet.resx">
       <DependentUpon>CalculationSheet.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reports\Jobs\NewPIDCalculationSheetReport.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>NewPIDCalculationSheetReport.cs</LastGenOutput>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reports\Jobs\PIDCalculationSheetReport.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>PIDCalculationSheetReport.cs</LastGenOutput>
@@ -566,6 +585,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Items\ItemListScreen.resx">
       <DependentUpon>ItemListScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Screens\Jobs\NewPidEntryForm.resx">
+      <DependentUpon>NewPidEntryForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Screens\Jobs\PidEntryForm.resx">
       <DependentUpon>PidEntryForm.cs</DependentUpon>
