--- a/Faith Associates/Faith Associates.csproj
+++ b/Faith Associates/Faith Associates.csproj
@@ -56,7 +56,7 @@
     <StartupObject>Faith_Associates.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>img.ico</ApplicationIcon>
+    <ApplicationIcon>faithIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>92A57EF7E6B762F352E3F2331F74BA88D199A87E</ManifestCertificateThumbprint>
@@ -702,6 +702,7 @@
     </PublishFile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="faithIcon.ico" />
     <Content Include="img.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
